# irc68k

./: README.md
mIRC_Mac/: CMakeLists.txt
mIRC_Mac/include/: mock_mac.h
mIRC_Mac/resources/: mIRC.r
mIRC_Mac/src/: IRCClient.cpp  IRCClient.h  MacApp.cpp  MacApp.h  MockImpl.cpp  main.cpp
